<resources>
    <string name="app_name">FileManager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="add_item_activity_title">新建</string>
    <string name="add_item_activity_autofill_hint">新建文件(夹)</string>
    <string name="btn_confirm">确认</string>
    <string name="add_item_activity_btn_cancel">取消</string>
    <string name="add_item_activity_btn_new_file">文件</string>
    <string name="add_item_activity_btn_new_directory">文件夹</string>

    <string name="menu_activity_btn_copy">复制</string>
    <string name="menu_activity_btn_shear">剪切</string>
    <string name="menu_activity_btn_link">链接</string>
    <string name="menu_activity_btn_rename">重命名</string>
    <string name="menu_activity_btn_delete">删除</string>
    <string name="menu_activity_btn_compress">压缩</string>
    <string name="menu_activity_btn_attribute">属性</string>
    <string name="menu_activity_btn_share">分享</string>
    <string name="menu_activity_btn_openas">打开方式</string>
    <string name="menu_activity_btn_bookmark">添加书签</string>
</resources>
