<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/add_item_activity_bg"
    android:orientation="vertical">
    <!--第一行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <!--复制-->
        <Button
            android:id="@+id/menu_activity_text_view_copy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/copy_adapter"
            android:drawablePadding="5dp"
            android:gravity="fill_vertical"
            android:text="@string/menu_activity_btn_copy"
            android:textSize="15sp"
            android:theme="@style/ButtonLight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>
        <!--剪切-->
        <Button
            android:id="@+id/menu_activity_text_view_shear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/shear_adapter"
            android:drawablePadding="5dp"
            android:gravity="fill_vertical"
            android:text="@string/menu_activity_btn_shear"
            android:textSize="15sp"
            android:theme="@style/ButtonLight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>
    </LinearLayout>

    <!--第二行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <!--链接-->
        <Button
            android:id="@+id/menu_activity_text_view_link"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/link_adapter"
            android:drawablePadding="5dp"
            android:gravity="fill_vertical"
            android:text="@string/menu_activity_btn_link"
            android:textSize="15sp"
            android:theme="@style/ButtonLight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>
        <!--重命名-->
        <Button
            android:id="@+id/menu_activity_text_view_rename"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/rename_adapter"
            android:drawablePadding="5dp"
            android:gravity="fill_vertical"
            android:text="@string/menu_activity_btn_rename"
            android:textSize="15sp"
            android:theme="@style/ButtonLight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>
    </LinearLayout>

    <!--第三行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <!--删除-->
        <Button
            android:id="@+id/menu_activity_text_view_delete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/delete_adapter"
            android:drawablePadding="5dp"
            android:gravity="fill_vertical"
            android:text="@string/menu_activity_btn_delete"
            android:textSize="15sp"
            android:theme="@style/ButtonLight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>
        <!--压缩-->
        <Button
            android:id="@+id/menu_activity_text_view_compress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/compress_adapter"
            android:drawablePadding="5dp"
            android:gravity="fill_vertical"
            android:text="@string/menu_activity_btn_compress"
            android:textSize="15sp"
            android:theme="@style/ButtonLight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>
    </LinearLayout>

    <!--第四行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <!--属性-->
        <Button
            android:id="@+id/menu_activity_text_view_attribute"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/attribute_adapter"
            android:drawablePadding="5dp"
            android:gravity="fill_vertical"
            android:text="@string/menu_activity_btn_attribute"
            android:textSize="15sp"
            android:theme="@style/ButtonLight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>
        <!--分享-->
        <Button
            android:id="@+id/menu_activity_text_view_share"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/share_adapter"
            android:drawablePadding="5dp"
            android:gravity="fill_vertical"
            android:text="@string/menu_activity_btn_share"
            android:textSize="15sp"
            android:theme="@style/ButtonLight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>
    </LinearLayout>

    <!--第五行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <!--打开方式-->
        <Button
            android:id="@+id/menu_activity_text_view_openas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/openas_adapter"
            android:drawablePadding="5dp"
            android:gravity="fill_vertical"
            android:text="@string/menu_activity_btn_openas"
            android:textSize="15sp"
            android:theme="@style/ButtonLight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>
        <!--添加书签-->
        <Button
            android:id="@+id/menu_activity_text_view_bookmark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/bookmark_adapter"
            android:drawablePadding="5dp"
            android:gravity="fill_vertical"
            android:text="@string/menu_activity_btn_bookmark"
            android:textSize="15sp"
            android:theme="@style/ButtonLight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>